force-app/main/default/objects/Job_Application__c/fields/AI_Match_Score__c.field-meta.xml
<CustomField>
    <fullName>AI_Match_Score__c</fullName>
    <label>AI Match Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
    <description>AI computed match score between candidate profile and job requirements (0-100)</description>
</CustomField>