force-app/main/default/objects/Job_Application__c/fields/AI_Notes__c.field-meta.xml
<CustomField>
    <fullName>AI_Notes__c</fullName>
    <label>AI Notes</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>