force-app/main/default/objects/Job_Application__c/fields/AI_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>AI_Recommendation__c</fullName>
    <label>AI Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strongly Recommend</fullName>
            </value>
            <value>
                <fullName>Recommend</fullName>
            </value>
            <value>
                <fullName>Consider</fullName>
                <default>true</default>
                <label>Consider</label>
            </value>
            <value>
                <fullName>Not Recommended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>