force-app/main/default/objects/Job_Application__c/fields/Current_Stage__c.field-meta.xml
<CustomField>
    <fullName>Current_Stage__c</fullName>
    <label>Current Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application Review</fullName>
                <default>true</default>
                <label>Application Review</label>
            </value>
            <value>
                <fullName>Phone Screen</fullName>
            </value>
            <value>
                <fullName>Technical Interview</fullName>
            </value>
            <value>
                <fullName>HR Interview</fullName>
            </value>
            <value>
                <fullName>Final Interview</fullName>
            </value>
            <value>
                <fullName>Offer Stage</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>