force-app/main/default/objects/Job_Application__c/fields/Job_Opening__c.field-meta.xml
<CustomField>
    <fullName>Job_Opening__c</fullName>
    <label>Job Opening</label>
    <type>Lookup</type>
    <referenceTo>Job_Opening__c</referenceTo>
    <relationshipLabel>Job Applications</relationshipLabel>
    <relationshipName>Job_Applications</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
</CustomField>